--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Студия web дизайна в Киеве" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+        <a href="./index.html" class="logo">WebStudio</a>
+        <ul class="site-nav">
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -107,12 +108,12 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-footer">WebStudio</a>
       <address>
-        <ul>
-          <li><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="address">
+          <li class="map"><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
