--- a/portfolio.html
+++ b/portfolio.html
@@ -4,66 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <title>WebStudio-Portfolio</title>
+   <link rel="stylesheet" href="./css/styles.css">
+  </head>
+  <body>
     <!-- header -->
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html"></a>Студия</li>
-                <li><a href="/portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <nav>
+        <a href="./index.html" class="logo">WebStudio</a>
+        <ul class="site-nav">
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
-        </header>
-        <main>
+      </nav>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+
 <section>
-<h2></h2>
-<ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
 </section>
+
 <section>
-<h2></h2>
-<ul>
-    <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
-    </li><li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
-    </li>
-    <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
-    </li>
-    
-</ul>
 </section>
 </main>
 <!-- footer -->
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+      <a href="./index.html" class="logo-footer">WebStudio</a>
+      <address>
+        <ul class="address">
+          <li class="map"><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
