--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="description" content="Студия web дизайна в Киеве" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul class="site-nav">
           <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
@@ -26,37 +28,37 @@
     </header>
     <main>
       <!-- hero -->
-      <section>
-        <h1>Эффективные решения <br> для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+        <button type="button" class="order-service" >Заказать услугу</button>
       </section>
       <!-- advantage -->
-      <section>
-        <h2>Преимущества</h2>
+      <section class="section-advantage">
+        <h2 class="advantage-title-none">Преимущества</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="advantage-title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="advantage-title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="advantage-title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="advantage-title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -65,8 +67,8 @@
         </ul>
       </section>
       <!-- services -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section-services">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <a href=""><img src="./images/desktop.jpg" alt="персональный компьютер" width="370"/></a>
@@ -80,27 +82,27 @@
         </ul>
       </section>
       <!-- team -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section-team">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/Igor.jpg" alt="фотография Игоря Демьяненко" width="270"/>
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="team-title">Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/Olga.jpg" alt="фотография Ольги Репиной" width="270"/>
-            <h3>Ольга Репина</h3>
+            <h3 class="team-title">Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/Nikolay.jpg" alt="фотография Николая Тарасова" width="270"/>
-            <h3>Николай Тарасов</h3>
+            <h3 class="team-title">Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/Mihail.jpg" alt="фотография Михаила Ермакова" width="270"/>
-            <h3>Михаил Ермаков</h3>
+            <h3 class="team-title">Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
@@ -108,9 +110,9 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html" class="logo-footer">WebStudio</a>
+      <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
       <address>
-        <ul class="address">
+        <ul>
           <li class="map"><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li class="tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
