--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
       <!-- advantage -->
       <section class="section-advantage">
-        <h2 class="advantage-title-none">Преимущества</h2>
+        <h2 class="section-title">Преимущества</h2>
         <ul>
           <li>
             <h3 class="advantage-title">Внимание к деталям</h3>
