--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Студия web дизайна в Киеве" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -16,14 +18,14 @@
       <nav>
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul class="site-nav">
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="site-contacts">
+        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -99,7 +101,7 @@
             <img src="./images/Nikolay.jpg" alt="фотография Николая Тарасова" width="270"/>
             <h3 class="team-title">Николай Тарасов</h3>
             <p lang="en">Marketing</p>
-          </li>
+          </li> 
           <li>
             <img src="./images/Mihail.jpg" alt="фотография Михаила Ермакова" width="270"/>
             <h3 class="team-title">Михаил Ермаков</h3>
@@ -112,10 +114,10 @@
     <footer>
       <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
       <address>
-        <ul>
-          <li class="map"><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="address">
+          <li><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" class="map-footer" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com" class="contact-footer">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="contact-footer">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
