--- a/portfolio.html
+++ b/portfolio.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio-Portfolio</title>
    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul class="site-nav">
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="./index.html" class="link ">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="site-contacts">
+        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -33,12 +36,12 @@
 </main>
 <!-- footer -->
     <footer>
-      <a href="./index.html" class="logo-footer">WebStudio</a>
+      <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
       <address>
         <ul class="address">
-          <li class="map"><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" class="map-footer" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com" class="contact-footer">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="contact-footer">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
