--- a/index.html
+++ b/index.html
@@ -35,33 +35,33 @@
         <button type="button" class="order-service" >Заказать услугу</button>
       </section>
       <!-- advantage -->
-      <section class="section-advantage">
+      <section class="advantage">
         <h2 class="section-title">Преимущества</h2>
         <ul>
           <li>
             <h3 class="advantage-title">Внимание к деталям</h3>
-            <p>
+            <p class="advantage-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="advantage-title">Пунктуальность</h3>
-            <p>
+            <p class="advantage-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="advantage-title">Планирование</h3>
-            <p>
+            <p class="advantage-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="advantage-title">Современные технологии</h3>
-            <p>
+            <p class="advantage-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -69,7 +69,7 @@
         </ul>
       </section>
       <!-- services -->
-      <section class="section-services">
+      <section class="services">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -84,28 +84,28 @@
         </ul>
       </section>
       <!-- team -->
-      <section class="section-team">
+      <section class="team">
         <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/Igor.jpg" alt="фотография Игоря Демьяненко" width="270"/>
             <h3 class="team-title">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/Olga.jpg" alt="фотография Ольги Репиной" width="270"/>
             <h3 class="team-title">Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/Nikolay.jpg" alt="фотография Николая Тарасова" width="270"/>
             <h3 class="team-title">Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <p class="team-text" lang="en">Marketing</p>
           </li> 
           <li>
             <img src="./images/Mihail.jpg" alt="фотография Михаила Ермакова" width="270"/>
             <h3 class="team-title">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
