--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- hero -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-        <button type="button" class="order-service" >Заказать услугу</button>
+        <button type="button" class="hero-button" >Заказать услугу</button>
       </section>
       <!-- advantage -->
       <section class="advantage">
