--- a/portfolio.html
+++ b/portfolio.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio-Portfolio</title>
-   <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-  </head>
-  <body>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>WebStudioPortfolio</title>
+</head>
+<body>
     <!-- header -->
     <header>
       <nav>
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul class="site-nav">
-          <li><a href="./index.html" class="link ">Студия</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -26,12 +26,62 @@
         <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main>
-
 <section>
-</section>
-
-<section>
+<h1 class="section-title">Портфолио</h1>
+<ul class="buttons-filter">
+    <li> <button type="button" class="filter">Все</button> </li>
+    <li> <button type="button" class="filter">Веб-сайты</button> </li>
+    <li> <button type="button" class="filter">Приложения</button> </li>
+    <li> <button type="button" class="filter">Дизайн</button> </li>
+    <li> <button type="button" class="filter">Маркетинг</button> </li>
+</ul>
+<ul class="examples-work">
+    <li>
+        <a href=""><img src="./images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370">
+        <h3 class="examples-title">Технокряк</h3>
+        <p class="examples-text">Веб-сайт</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio2.jpg" alt="Два баскетболиста с мячом" width="370">
+        <h3 class="examples-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h3>
+        <p class="examples-text">Дизайн</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio3.jpg" alt="Акула и название ресторана" width="370">
+        <h3 class="examples-title">Ресторан <span lang="en">Seafood</span></h3>
+        <p class="examples-text">Приложение</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio4.jpg" alt="Полноразмерные наушники" width="370">
+        <h3 class="examples-title">Проект <span lang="en">Prime</span></h3>
+        <p class="examples-text">Маркетинг</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio5.jpg" alt="Две коробки" width="370">
+        <h3 class="examples-title">Проект <span lang="en">Boxes</span></h3>
+        <p class="examples-text">Приложение</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio6.jpg" alt="Веб-сайт на экране монитора" width="370">
+        <h3 class="examples-title" lang="en">Inspiration has no Borders</h3>
+        <p class="examples-text">Веб-сайт</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio7.jpg" alt="Открытая книга с картинками" width="370">
+        <h3 class="examples-title">Издание <span lang="en">Limited Edition</span></h3>
+        <p class="examples-text">Дизайн</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio8.jpg" alt="Ярлык" width="370">
+        <h3 class="examples-title">Проект <span lang="en">LAB</span></h3>
+        <p class="examples-text">Маркетинг</p></a>
+    </li>
+    <li>
+        <a href=""><img src="./images/portfolio9.jpg" alt="Приложение  в котором работают на ноутбуке" width="370">
+        <h3 class="examples-title" lang="en">Growing Business</h3>
+        <p class="examples-text">Приложение</p></a>
+    </li>
+</ul>
 </section>
 </main>
 <!-- footer -->
@@ -45,5 +95,5 @@
         </ul>
       </address>
     </footer>
-  </body>
+</body>
 </html>
