--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo">Web<span>Studio</span></a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+        <a class="logo link-none" href="./index.html">Web<span>Studio</span></a>
+        <ul class="site-nav list-none">
+          <li><a class="link  link-none current" href="./index.html">Студия</a></li>
+          <li><a class="link link-none" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link link-none" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="site-contacts">
-        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+      <ul class="site-contacts list-none">
+        <li><a class="contact link-none" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact link-none" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!-- hero -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-        <button type="button" class="hero-button" >Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!-- advantage -->
       <section class="advantage">
-        <h2 class="section-title">Преимущества</h2>
-        <ul>
+        <h2 class="hidden">Преимущества</h2>
+        <ul class="advantage-list list-none">
           <li>
             <h3 class="advantage-title">Внимание к деталям</h3>
             <p class="advantage-text">
@@ -71,7 +71,7 @@
       <!-- services -->
       <section class="services">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="services-list list-none">
           <li>
             <a href=""><img src="./images/desktop.jpg" alt="персональный компьютер" width="370"/></a>
           </li>
@@ -86,7 +86,7 @@
       <!-- team -->
       <section class="team">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list list-none">
           <li>
             <img src="./images/Igor.jpg" alt="фотография Игоря Демьяненко" width="270"/>
             <h3 class="team-title">Игорь Демьяненко</h3>
@@ -112,12 +112,12 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
+      <a class="logo-address link-none" href="./index.html">Web<span>Studio</span></a>
       <address>
-        <ul class="address">
-          <li><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" class="map-footer" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com" class="contact-footer">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="contact-footer">+38 096 111 11 11</a></li>
+        <ul class="address-list list-none">
+          <li><a class="map-address link-none" href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a class="contact-address link-none" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-address link-none" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
