--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudioPortfolio</title>
 </head>
@@ -14,70 +15,73 @@
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo">Web<span>Studio</span></a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+        <a class="logo link-none" href="./index.html">Web<span>Studio</span></a>
+        <ul class="site-nav list-none">
+          <li><a class="link link-none" href="./index.html">Студия</a></li>
+          <li><a class="link link-none current" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link link-none" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="site-contacts">
-        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+      <ul class="site-contacts list-none">
+        <li><a class="contact link-none" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact link-none" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- main -->
+    <main>
 <section>
-<h1 class="section-title">Портфолио</h1>
-<ul class="buttons-filter">
-    <li> <button type="button" class="filter">Все</button> </li>
-    <li> <button type="button" class="filter">Веб-сайты</button> </li>
-    <li> <button type="button" class="filter">Приложения</button> </li>
-    <li> <button type="button" class="filter">Дизайн</button> </li>
-    <li> <button type="button" class="filter">Маркетинг</button> </li>
+<h1 class="hidden">Портфолио</h1>
+<ul class="buttons-filter list-none">
+    <li> <button type="button" class="btn-filter link-none">Все</button> </li>
+    <li> <button type="button" class="btn-filter link-none">Веб-сайты</button> </li>
+    <li> <button type="button" class="btn-filter link-none">Приложения</button> </li>
+    <li> <button type="button" class="btn-filter link-none">Дизайн</button> </li>
+    <li> <button type="button" class="btn-filter link-none">Маркетинг</button> </li>
 </ul>
-<ul class="examples-work">
+<h2 class="hidden">Примеры работ</h2>
+<ul class="examples-list list-none">
     <li>
-        <a href=""><img src="./images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370">
         <h3 class="examples-title">Технокряк</h3>
         <p class="examples-text">Веб-сайт</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio2.jpg" alt="Два баскетболиста с мячом" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio2.jpg" alt="Два баскетболиста с мячом" width="370">
         <h3 class="examples-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h3>
         <p class="examples-text">Дизайн</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio3.jpg" alt="Акула и название ресторана" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio3.jpg" alt="Акула и название ресторана" width="370">
         <h3 class="examples-title">Ресторан <span lang="en">Seafood</span></h3>
         <p class="examples-text">Приложение</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio4.jpg" alt="Полноразмерные наушники" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio4.jpg" alt="Полноразмерные наушники" width="370">
         <h3 class="examples-title">Проект <span lang="en">Prime</span></h3>
         <p class="examples-text">Маркетинг</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio5.jpg" alt="Две коробки" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio5.jpg" alt="Две коробки" width="370">
         <h3 class="examples-title">Проект <span lang="en">Boxes</span></h3>
         <p class="examples-text">Приложение</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio6.jpg" alt="Веб-сайт на экране монитора" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio6.jpg" alt="Веб-сайт на экране монитора" width="370">
         <h3 class="examples-title" lang="en">Inspiration has no Borders</h3>
         <p class="examples-text">Веб-сайт</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio7.jpg" alt="Открытая книга с картинками" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio7.jpg" alt="Открытая книга с картинками" width="370">
         <h3 class="examples-title">Издание <span lang="en">Limited Edition</span></h3>
         <p class="examples-text">Дизайн</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio8.jpg" alt="Ярлык" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio8.jpg" alt="Ярлык" width="370">
         <h3 class="examples-title">Проект <span lang="en">LAB</span></h3>
         <p class="examples-text">Маркетинг</p></a>
     </li>
     <li>
-        <a href=""><img src="./images/portfolio9.jpg" alt="Приложение  в котором работают на ноутбуке" width="370">
+        <a class="link-none" href=""><img class="examples-img" src="./images/portfolio9.jpg" alt="Приложение  в котором работают на ноутбуке" width="370">
         <h3 class="examples-title" lang="en">Growing Business</h3>
         <p class="examples-text">Приложение</p></a>
     </li>
@@ -86,12 +90,12 @@
 </main>
 <!-- footer -->
     <footer>
-      <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
+      <a class="logo-address link-none" href="./index.html">Web<span>Studio</span></a>
       <address>
-        <ul class="address">
-          <li><a href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" class="map-footer" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com" class="contact-footer">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="contact-footer">+38 096 111 11 11</a></li>
+        <ul class="address-list list-none">
+          <li><a class="map-address link-none" href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a class="contact-address link-none" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-address link-none" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
