--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- header -->
     <header>
       <nav>
-        <a class="logo link-none" href="./index.html">Web<span>Studio</span></a>
+        <a class="logo link-none" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list-none">
           <li><a class="link  link-none current" href="./index.html">Студия</a></li>
           <li><a class="link link-none" href="./portfolio.html">Портфолио</a></li>
@@ -73,13 +73,13 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="services-list list-none">
           <li>
-            <a href=""><img src="./images/desktop.jpg" alt="персональный компьютер" width="370"/></a>
+          <img src="./images/desktop.jpg" alt="персональный компьютер" width="370"/>
           </li>
           <li>
-            <a href=""><img src="./images/mobile.jpg" alt="мобильный телефон"  width="370"/></a>
+          <img src="./images/mobile.jpg" alt="мобильный телефон"  width="370"/>
           </li>
           <li>
-            <a href=""><img src="./images/tablet.jpg" alt="планшет" width="370"/></a>
+          <img src="./images/tablet.jpg" alt="планшет" width="370"/>
           </li>
         </ul>
       </section>
@@ -112,8 +112,8 @@
     </main>
     <!-- footer -->
     <footer>
-      <a class="logo-address link-none" href="./index.html">Web<span>Studio</span></a>
-      <address>
+      <a class="logo link-none" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+      <address class="addresses">
         <ul class="address-list list-none">
           <li><a class="map-address link-none" href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li><a class="contact-address link-none" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
