--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
     <!-- header -->
     <header>
       <nav>
-        <a class="logo link-none" href="./index.html">Web<span>Studio</span></a>
+        <a class="logo link-none" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list-none">
-          <li><a class="link link-none" href="./index.html">Студия</a></li>
+          <li><a class="link  link-none" href="./index.html">Студия</a></li>
           <li><a class="link link-none current" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link link-none" href="">Контакты</a></li>
         </ul>
@@ -32,57 +32,56 @@
 <section>
 <h1 class="hidden">Портфолио</h1>
 <ul class="buttons-filter list-none">
-    <li> <button type="button" class="btn-filter link-none">Все</button> </li>
+    <li> <button type="button" class="btn-filter link-none button-active">Все</button> </li>
     <li> <button type="button" class="btn-filter link-none">Веб-сайты</button> </li>
     <li> <button type="button" class="btn-filter link-none">Приложения</button> </li>
     <li> <button type="button" class="btn-filter link-none">Дизайн</button> </li>
     <li> <button type="button" class="btn-filter link-none">Маркетинг</button> </li>
 </ul>
-<h2 class="hidden">Примеры работ</h2>
 <ul class="examples-list list-none">
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370">
-        <h3 class="examples-title">Технокряк</h3>
+        <h2 class="examples-title">Технокряк</h2>
         <p class="examples-text">Веб-сайт</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio2.jpg" alt="Два баскетболиста с мячом" width="370">
-        <h3 class="examples-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h3>
+        <h2 class="examples-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
         <p class="examples-text">Дизайн</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio3.jpg" alt="Акула и название ресторана" width="370">
-        <h3 class="examples-title">Ресторан <span lang="en">Seafood</span></h3>
+        <h2 class="examples-title">Ресторан <span lang="en">Seafood</span></h2>
         <p class="examples-text">Приложение</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio4.jpg" alt="Полноразмерные наушники" width="370">
-        <h3 class="examples-title">Проект <span lang="en">Prime</span></h3>
+        <h2 class="examples-title">Проект <span lang="en">Prime</span></h2>
         <p class="examples-text">Маркетинг</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio5.jpg" alt="Две коробки" width="370">
-        <h3 class="examples-title">Проект <span lang="en">Boxes</span></h3>
+        <h2 class="examples-title">Проект <span lang="en">Boxes</span></h2>
         <p class="examples-text">Приложение</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio6.jpg" alt="Веб-сайт на экране монитора" width="370">
-        <h3 class="examples-title" lang="en">Inspiration has no Borders</h3>
+        <h2 class="examples-title" lang="en">Inspiration has no Borders</h2>
         <p class="examples-text">Веб-сайт</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio7.jpg" alt="Открытая книга с картинками" width="370">
-        <h3 class="examples-title">Издание <span lang="en">Limited Edition</span></h3>
+        <h2 class="examples-title">Издание <span lang="en">Limited Edition</span></h2>
         <p class="examples-text">Дизайн</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio8.jpg" alt="Ярлык" width="370">
-        <h3 class="examples-title">Проект <span lang="en">LAB</span></h3>
+        <h2 class="examples-title">Проект <span lang="en">LAB</span></h2>
         <p class="examples-text">Маркетинг</p></a>
     </li>
     <li>
         <a class="link-none" href=""><img class="examples-img" src="./images/portfolio9.jpg" alt="Приложение  в котором работают на ноутбуке" width="370">
-        <h3 class="examples-title" lang="en">Growing Business</h3>
+        <h2 class="examples-title" lang="en">Growing Business</h2>
         <p class="examples-text">Приложение</p></a>
     </li>
 </ul>
@@ -90,8 +89,8 @@
 </main>
 <!-- footer -->
     <footer>
-      <a class="logo-address link-none" href="./index.html">Web<span>Studio</span></a>
-      <address>
+      <a class="logo link-none" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+      <address class="addresses">
         <ul class="address-list list-none">
           <li><a class="map-address link-none" href="https://goo.gl/maps/XkNCHodQhnQYmGNX7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li><a class="contact-address link-none" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
